# cluster

./: .env.example  .gitignore  manage.py  package-lock.json  pyproject.toml
actividades/: apps.py  forms.py  models.py  urls.py  views.py
actividades/migrations/: 0001_initial.py  0002_actividad_dcp_actividad_dcalle_actividad_dciudad_and_more.py  0003_registroactividad.py  0004_acompañanteactividad.py  0005_compraactividad.py  0006_registroactividad_escaneado_por_and_more.py  0007_alter_compraactividad_fecha_compra_and_more.py
agendas/: apps.py  forms.py  models.py  urls.py  views.py
agendas/migrations/: 0001_initial.py
aportaciones/: apps.py  models.py  urls.py  views.py
aportaciones/migrations/: 0001_initial.py  0002_aportacion.py  0003_aportacion_monto_pago.py
chatbot/: forms.py  models.py  urls.py  views.py
chatbot/migrations/: 0001_initial.py  0002_chatbotdocumento.py  0003_alter_chatbotconfig_seccion_fija_and_more.py
chatbot/services/: chat_service.py
entradas/: apps.py  forms.py  models.py  urls.py  views.py
entradas/migrations/: 0001_initial.py  0002_compraentrada.py  0003_cupon.py  0004_alter_compraentrada_metodo_pago.py  (+4 more)
eventos/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
eventos_anadicmx/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
expositores/: apps.py  forms.py  models.py  urls.py  views.py
notificaciones/: forms.py  models.py  urls.py  views.py
patrocinadores/: apps.py  forms.py  models.py  urls.py  views.py
stands/: apps.py  decorators.py  forms.py  models.py  urls.py  views.py
templates/: serviceworker.js
usuarios/: adapters.py  forms.py  mixins.py  models.py  urls.py  views.py
utils/: chatbox.py  fechas.py  filtrado_registros.py  permisos.py
web/: forms.py  models.py  urls.py  views.py
(+234 files in other folders)
